fix table scroll jumping

--- a/ClientApp/src/app/localization/localization-table/localization-table.component.scss
+++ b/ClientApp/src/app/localization/localization-table/localization-table.component.scss
@@ -27,7 +27,8 @@
 }
 
 .translation-content-cell {
-    max-height: 180px;
+    max-height: 104px;
+    min-height: 104px;
 }
 
 .header-content-cell {
@@ -50,5 +51,6 @@
         padding: 0.75rem;
         align-items: center;
         justify-content: space-between;
+        max-height: 100px;
     }
 }
